2025-05-24  John Hein  <@jhgit@github.com>

	Fix 'undefined symbol: locale_charset' failure.

	* configure.ac:
	  - Link with -liconv when locale_charset() is found in libiconv,
	    which is true since libiconv 1.17.

	Closes: #25.

2025-05-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix parallel test failure.

	* tests/test_file.c:
	* tests/test_serialization.c:
	  - Make TRIE_FILENAME unique for each test, to avoid operation
	    on the same file in parrallel test.

	Thanks @enter-github-username@github.com for the report.
	Closes: #28.

2025-05-15  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix "make --shuffle=reverse" failure.

	See Debian #1105545 for the report.

	* tools/Makefile.am:
	  - Make sure $(bindir) exists before installing old program
	    symlink.

2021-10-17  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Check fread() result in serialization test.

	* tests/test_serialization.c (main):
	  - Check fread() return value when reading back the serialized
	    trie file. (Caught by -Wunused-result when building deb.)

2021-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix PAPER_TYPE in Doxyfile.

	* doc/Doxyfile.in:
	  - Fix invalid PAPER_TYPE 'a4wide' to 'a4'.

2021-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update Doxyfile for doxygen 1.9.1.

	* doc/Doxyfile.in:
	  - Apply 'doxygen -u'.
	* configure.ac:
	  - Bump doxygen required version.

2021-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix documentation typo.

	* datrie/trie.h (TrieEnumFunc):
	  - Fix 'data' param to 'key_data' in doc comment.

2021-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Apply 'autoupdate' for autoconf 2.71

	* configure.ac:
	  - Quote m4 strings in AC_INIT() parameters.
	  - Replace AC_CONFIG_HEADER() with AC_CONFIG_HEADERS().
	  - Replace AC_PROG_LIBTOOL with LT_INIT. With this, drop
	    AC_LIBTOOL_WIN32_DLL, as we haven't really declared
	    dllexport anywhere yet.