@@ -56,6 +56,8 @@ trie_char_strdup (const TrieChar *str)
 {
     TrieChar *dup
         = (TrieChar *) malloc (sizeof (TrieChar) * (trie_char_strlen (str) + 1));
+    if (UNLIKELY (!dup))
+        return NULL;
     TrieChar *p = dup;
 
     while (*str != TRIE_CHAR_TERM) {
